--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 <body>
 <div id="header">
    <nav>
-      <li class="fork"><a href="https://github.com/static.kerchevalphotography.com">View On GitHub</a></li>
+      <li class="fork"><a href="https://github.com/kerchevalphotography.com">View On GitHub</a></li>
    </nav>
 </div><!-- end header -->
 
